2010-08-02  David Reveman  <davidr@novell.com>

	* runtime.h:
	* runtime.cpp: Add GetBitmapExtents function to ContextNode
	class.

2010-07-31  David Reveman  <davidr@novell.com>

	* uielement.cpp (ComputeLocalProjection): Canvas Z property
	should be set to NaN when no projection is present.

	* collection.cpp (UIElementZIndexComparer): Use isnan as NaN is
	never equal to Nan.

	* canvas.h:
	* projection.h:
	* projection.cpp: Use NAN, FP_NAN is not a floating point value.

2010-07-30  David Reveman  <davidr@novell.com>

	* collection.cpp (UIElementZIndexComparer): Only compare
	Z values when both elements have perspective transformations
	attached to them.

	* canvas.h: Use FP_NAN as default value for Z property.

	* projection.h:
	* projection.cpp: Return NaN instead of zero from
	DistanceFromXYPlane when distance can't be properly
	calculated.

2010-07-29  David Reveman  <davidr@novell.com>

	* uielement.cpp (ComputeTransform): Fix inheritance of
	perspective transformations for popup dialogs.

2010-07-28  David Reveman  <davidr@novell.com>

	* effect.c:
	* effect.cpp: Use cairo for integer translation.

	* projection.h:
	* projection.cpp: Add IsTranslation and IsIntegerTranslation.

	* dirty.cpp:
	* uielement.cpp: Invalidate the parent instead of the
	element itself whenever the change causing the
	invalidation doesn't require the bitmap cache to be
	invalidated.

2010-07-28  David Reveman  <davidr@novell.com>

	* grid.cpp:
	* runtime.cpp:
	* stylus.cpp:
	* uielement.h:
	* uielement.cpp: Have GetCr return NULL for contexts with
	pre-rendered bitmaps and in that way prevent unnecessary
	rendering of cached elements.

	* uielement.h:
	* uielement.cpp: Add initial bitmap cache support.
	New functions InvalidateBitmapCache and InvalidateCacheMode.

	* runtime.h:
	* runtime.cpp: Remove ContextNode::GetTarget.
	Add ContextNode::GetBitmap and ContextNode::SetBitmap.

2010-07-28  Jeffrey Stedfast  <fejj@novell.com>
